--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,12 @@ jobs:
       - python/install-deps
       - python/save-cache
       - run:
-          command: ./manage.py test
-          name: Test
+          name: Install Python Dependencies
+          command: |
+            pip install --user --no-cache-dir -r requirements.txt
+      - run:
+          name: Run Tests
+          command: ~/.local/bin/pytest
 
 workflows:
   main:
